# ofcode

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  Procfile  README.md  README.rst  TODO  config.rb  development.ini  guni_config.py  prod.ini  requirements.txt  runapp.py  setup.cfg  setup.py  test.ini  uwsgi.ini  zappa_settings.json.sample
.devcontainer/: Dockerfile  devcontainer.json
backend/: Cargo.toml
backend/src/: main.rs  settings.rs
ofcode/: __init__.py  baseconvert.py  decorators.py  formschemas.py  helpers.py  highlight.py  models.py  security.py  subscribers.py  views.py
ofcode/static/javascripts/: JSLIST  jquery.hotkeys.js  ofcode-03212012.1-min.js  ofcode-03222012.1-min.js  ofcode.js
ofcode/static/stylesheets/: andika.css  anon_font.css  anon_font_b.css  bitstream_mono.css  bitstream_vera.css  dejavusansmono.css  ie.css  ofcode-012917.1-min.css  ofcode-03212012.1-min.css  screen.css
ofcode/templates/: api.mak  index.mak  layout.mak  view.mak
ofcode/templates/lib/: forms.mak
ofcode/tests/: test_baseconvert.py  test_pygments.py
sass/: _base.sass  screen.sass
sass/partials/: _pygments.sass
util/: update_css.py  update_javascript.py
