[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.6.2", features = ["cookie-session"] }
actix-web = "4"
base64 = "0.13.0"
config = "0.13"
derive_more = "0.99.17"
redis = { version = "0.21.5", features = ["tokio-comp"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
mobc = "0.7.3"
mobc-redis = "0.7.0"
nanoid = "0.4.0"
